@@ -5,6 +5,7 @@ OpenLDAP 2.4.43 Engineering
 	Fixed slapd to avoid redundant processing of abandon ops (ITS#8232)
 	Fixed slapd syncrepl segv when present list is NULL (ITS#8231, ITS#8042)
 	Fixed slapd segfault with invalid SASL URI (ITS#8218)
+	Fixed slapd must reject lines with unbalanced quotes (ITS#8233)
 	Fixed slapd-ldap SEGV after failed retry (ITS#8173)
 	Fixed slapo-dds segfault when using slapo-memberof (ITS#8133)
 	Fixed slapo-ppolicy to allow purging of stale pwdFailureTime attributes (ITS#8185)
